# myLLM

./: .gitignore  pyproject.toml
RAG-learning/code-learning/: decomposition_querytranslation.py  indexing_and_retrieval.py  learning_langchain.py  multiquestion_querytranslation.py  ragfusion_querytranslation.py  utils.py
RAG-learning/code-learning/query_translation/: HyDE_querytranslation.py  decomposition_querytranslation.py  multiquestion_querytranslation.py  ragfusion_querytranslation.py  stepback_querytranslation.py
RAG-learning/code-learning/routing/: logical_routing.py  semantic_routing.py
RAG-learning/code_learning/: utils.py
RAG-learning/code_learning/active_rag/: crag_basic.py  crag_with_langgraph.py  custom_crag_with_langgraph.py
RAG-learning/code_learning/basics/: learning_langchain.py
RAG-learning/code_learning/query_translation/: HyDE_querytranslation.py  stepback_querytranslation.py
RAG-learning/notes/: active_RAG.md  learning_notes_basics.md  learning_notes_generation.md  learning_notes_indexing.md  learning_notes_querytranslation.md  learning_notes_retrieval.md  learning_notes_routing.md  mutli_representation_indexing.md  query_construction.md
RAG-learning/reading_list/: High-level-list.md
RL-LLM-learning/notes/: chapter1_DeepRL.md  chapter2_DeepPolicyEvaluation.md  chapter3-4_DeepPolicyGradientMethods.md  chapter5_AlphaGo-testtimecompute.md  opening_video.md  post_chapter_4_notes_DeepSeek.md  todo_after_course.md
basics/: running_qwen.py
code_learning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_utils.py
