[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "code-learning"
version = "0.1.0"

[tool.setuptools]
packages = ["code_learning", "code_learning.query_translation", "code_learning.routing", "code_learning.basics"]

[tool.setuptools.package-dir]
"code_learning" = "RAG-learning/code-learning"